--- a/conf/blog/static/stile.css
+++ b/conf/blog/static/stile.css
@@ -20,8 +20,7 @@
 }
 
 .article-image {
-  width: 300px;
-  height: 200px;
+  background: 0 0/contain;
   overflow: hidden;
   display: flex;
   align-items: center;
@@ -56,7 +55,7 @@
 }
 
 .logo {
-  font-size 24px;
+  font-size: 24px;
   margin: 0;
 }
 
