--- a/conf/blog/templates/blog/detail_page.html
+++ b/conf/blog/templates/blog/detail_page.html
@@ -14,15 +14,16 @@
         <p class="date">Дата создания: {{ item.created_at }} </p><br>
     </div>
 
-     {% if user.is_authenticated  %}
+    {% if user.is_authenticated %}
 
     <form action="{% url 'like' %}" method="post">
         <input type="hidden" value="{{item.pk}}" name="article">
         {% csrf_token %}
         {% if item|check_like:user %}
         <h4>
-        Автор: {{ item.author.first_name }} {{ item.author.last_name }} <button  style="background-color: #cb000a" class="like-button">Лайк</button>
-    </h4>
+            Автор: {{ item.author.first_name }} {{ item.author.last_name }}
+            <button style="background-color: #cb000a" class="like-button">Лайк</button>
+        </h4>
         <input type="hidden" name="like" value="1">
         {% else %}
         <h4>Автор: {{ item.author.first_name }} {{ item.author.last_name }}
@@ -33,7 +34,9 @@
 
 
     {% else %}
-    <h4>Автор: {{ item.author.first_name }} {{ item.author.last_name }} <button disabled class="like-button">Лайк</button></h4>
+    <h4>Автор: {{ item.author.first_name }} {{ item.author.last_name }}
+        <button disabled class="like-button">Лайк</button>
+    </h4>
     {% endif %}
 
     <div class="content">
@@ -45,13 +48,27 @@
         <h2>Комментарии</h2>
         <br>
         <form class="comment-form" action="{% url 'comments' item.id %}" method="POST">
+            {% csrf_token %}
             <textarea name="comment" placeholder="Введите комментарий"
                       required></textarea>
+            {% if user.is_authenticated %}
             <button type="submit">Отправить</button>
+            {% else %}
+            <button disabled type="submit">Отправить</button>
+            {% endif %}
 
         </form>
         <div class="comment-list">
-            <!-- Здесь будет список комментариев -->
+            {% for comment in comments %}
+            <div class="comment">Коментарий: {{ comment.content }}
+                {% if comment.has_deleted %}
+                <a href="{% url 'comment_delete' comment.id %}">___________________________________X</a>
+                {% endif %}
+                <br>
+                <img style="height: 50px; width: 50px" src="{{comment.user.photo.url}}" alt=""> {{ comment.user.last_name }} {{ comment.user.first_name }}<br>
+                <br>
+            </div>
+            {% endfor %}
         </div>
     </div>
 </div>
