--- a/conf/templates/account/base.html
+++ b/conf/templates/account/base.html
@@ -1,7 +1,9 @@
-<!DOCTYPE html>
+{% load static %}
+
 <html>
   <head>
     <title>{% block head_title %}{% endblock %}</title>
+    <link rel="stylesheet" href="{% static 'stile.css'%}">
     {% block extra_head %}
     {% endblock %}
   </head>
@@ -18,19 +20,6 @@
       </ul>
     </div>
     {% endif %}
-
-    <div>
-      <strong>Menu:</strong>
-      <ul>
-        {% if user.is_authenticated %}
-        <li><a href="{% url 'account_email' %}">Change E-mail</a></li>
-        <li><a href="{% url 'account_logout' %}">Sign Out</a></li>
-        {% else %}
-        <li><a href="{% url 'account_login' %}">Sign In</a></li>
-        <li><a href="{% url 'account_signup' %}">Sign Up</a></li>
-        {% endif %}
-      </ul>
-    </div>
     {% block content %}
     {% endblock %}
     {% endblock %}
