--- a/conf/templates/socialaccount/login.html
+++ b/conf/templates/socialaccount/login.html
@@ -1,24 +1,15 @@
 {% extends "socialaccount/base.html" %}
 {% load i18n %}
-<<link rel="stylesheet" href="../css/registrStyle.css">
-
-{% block head_title %}{% trans "Sign In" %}{% endblock %}
 
 {% block content %}
-<div style="background-color: gray">
-  {% if process == "connect" %}
-<h1>{% blocktrans with provider.name as provider %}Connect {{ provider }}{% endblocktrans %}</h1>
 
-<p>{% blocktrans with provider.name as provider %}You are about to connect a new third party account from {{ provider }}.{% endblocktrans %}</p>
-{% else %}
-<h1>{% blocktrans with provider.name as provider %}Sign In Via {{ provider }}{% endblocktrans %}</h1>
-
-<p>{% blocktrans with provider.name as provider %}You are about to sign in using a third party account from {{ provider }}.{% endblocktrans %}</p>
-{% endif %}
-
-<form method="post">
+<body class="authbody">
+<form method="post" class="vkAuth">
   {% csrf_token %}
-  <button type="submit">{% trans "Continue" %}</button>
+
+  <button class="loginbutton" type="submit">{% trans "Авторизоваться через ВК" %}</button>
+
 </form>
-</div>
 {% endblock %}
+</body>
+
